--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -2,6 +2,10 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  background-color: #000000;
+  font-size: 14px;
+  line-height: 21px;
 }
 
+.main-container {
+  display: block;
+}
