--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,5 @@
 @import "./global/global.scss";
 @import "./blocks/button.scss";
 @import "./blocks/main-container.scss";
+@import "./blocks/benefits.scss";
+@import "./blocks/advantages.scss";
