стилизация главной страницы

--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -1,7 +1,6 @@
 .benefits {
   list-style-type: none;
-  display: grid;
-  grid-template-columns: 256px 256px 256px;
-  grid-template-rows: 256px 256px 256px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
 }
-
