--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,3 +3,4 @@
 @import "./blocks/main-container.scss";
 @import "./blocks/benefits.scss";
 @import "./blocks/advantages.scss";
+@import "./blocks/information.scss";
