--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -10,4 +10,13 @@
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+.advantages__description {
+  font-size: 21px;
+  line-height: 26px;
+  align-items: center;
+  text-transform: uppercase;
 }
