--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -9,10 +9,16 @@
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .description__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
 }
