--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,4 @@
 @import "./blocks/benefits.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/information.scss";
+@import "./blocks/description.scss";
