--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,4 @@
 @import "./blocks/advantages.scss";
 @import "./blocks/information.scss";
 @import "./blocks/description.scss";
+@import "./blocks/your-self.scss";
