готовая вторая страница

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,4 @@
 @import "./blocks/information.scss";
 @import "./blocks/description.scss";
 @import "./blocks/your-self.scss";
+@import "./blocks/your-contact.scss";
