--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,4 @@
 @import "./blocks/description.scss";
 @import "./blocks/your-self.scss";
 @import "./blocks/your-contact.scss";
+@import "./blocks/impression.scss";
