закончил вторую страницу

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,5 @@
 @import "./blocks/your-self.scss";
 @import "./blocks/your-contact.scss";
 @import "./blocks/impression.scss";
+@import "./blocks/attraction.scss";
+@import "./blocks/emotions.scss";
