--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -2,6 +2,13 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
+
+  &--catalog {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
 }
 
 .information__title {
