--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,4 @@
 @import "./blocks/impression.scss";
 @import "./blocks/attraction.scss";
 @import "./blocks/emotions.scss";
+@import "./blocks/catalog.scss"
