--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -2,6 +2,12 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
+}
+
+.information__title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 26px;
 
   &--catalog {
     font-weight: 700;
@@ -11,16 +17,15 @@
   }
 }
 
-.information__title {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 26px;
-}
-
 .information__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+
+  &--catalog {
+    font-size: 14px;
+    line-height: 21px;
+  }
 }
 
 .information__button {
