--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>{{ pages[pageId].name }} | Sedona | HTML Academy</title>
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="page__body">
