--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
 @import "./global/global.scss";
+@import "./global/variables.scss";
 @import "./blocks/button.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/benefits.scss";
@@ -10,4 +11,4 @@
 @import "./blocks/impression.scss";
 @import "./blocks/attraction.scss";
 @import "./blocks/emotions.scss";
-@import "./blocks/catalog.scss"
+@import "./blocks/catalog.scss";
