подключитл изменения для экрана

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,4 @@
 @import "./blocks/emotions.scss";
 @import "./blocks/catalog.scss";
 @import "./global/fonts.scss";
+@import "./global/viewports.scss";
