--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -4,6 +4,22 @@ img {
   object-position: center;
 }
 
-body {
-  font-family: "PT Sans", sans-serif;
-}
+// .main-index::before {
+content: "";
+display: block;
+width: 100%;
+height: 485px; /* тут не помню сколько оно по высоте */
+background-image:
+  url("/source/icons/welcom.svg"),
+  url("/source/icons/zig-zag.svg"),
+  url("/source/img/sedona.jpg");
+background-repeat: no-repeat;
+background-size:
+  458px 352px,
+    1200px 57px,
+     er  ; /* тут надо просто заполнить всю площадь фоткой */
+background-position:
+  center,
+    bottom,
+    center    ; /* при ковровой растяжке фотки лучше всего отцентрировать */
+background-color: #555555; /* нужен какой-то цвет фоновый на случай незагрузки фотки. */
