--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,27 +1,31 @@
-.advantages {
+.advantages__list {
   display: grid;
+  list-style-type: none;
   grid-template-columns: 1fr;
+  padding: 0;
+  margin: 0;
 
   @media (--not-mobile) {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-.advantages__list {
-  list-style-type: none;
-}
-
 .advantages__title {
   font-weight: 700;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 26px;
   align-items: center;
   text-transform: uppercase;
+  margin: 0;
+
+  @media (--not-mobile) {
+    font-size: 21px;
+  }
 }
 
 .advantages__description {
-  font-size: 21px;
-  line-height: 26px;
+  font-size: 14px;
+  line-height: 21px;
   align-items: center;
   text-transform: uppercase;
 }
