--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -5,3 +5,24 @@
   font-size: 14px;
   line-height: 21px;
 }
+
+.main-container::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 485px; /* тут не помню сколько оно по высоте */
+  background-image:
+    url("/source/icons/welcom.svg"),
+    url("/source/icons/zig-zag.svg"),
+    url("/source/img/sedona.jpg");
+  background-repeat: no-repeat;
+  background-size:
+    458px 352px, /* размеры надписи */
+    1200px 57px, /* размеры зигзага */
+    cover; /* тут надо просто заполнить всю площадь фоткой */
+  background-position:
+    center, /* возможно в макет с центрированием не попадём, но пока сойдёт */
+    bottom, /* прижимаем загогулину к низу */
+    center; /* при ковровой растяжке фотки лучше всего отцентрировать */
+  background-color: #555555; /* нужен какой-то цвет фоновый на случай незагрузки фотки. */
+}
