--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,3 +1,12 @@
+.advantages {
+margin: 0;
+padding: 0;
+
+  @media (--mobile) {
+    margin: 23px 18px 52px 18px;
+    padding: 0;
+  }
+
 .advantages__list {
   display: grid;
   list-style-type: none;
@@ -7,6 +16,13 @@
 
   @media (--not-mobile) {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.advantages__item {
+  @media (--mobile) {
+    margin: 0;
+    margin-bottom: 22px;
   }
 }
 
@@ -28,4 +44,17 @@
   line-height: 21px;
   align-items: center;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+
+  @media (--mobile) {
+    margin-top: 16px;
+  }
+}
+
+
+.advantages__logo {
+  height: 72px;
+  outline: 5px solid rgba(17, 0, 252, 0.8);
+  outline-offset: -5px;
 }
