--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -5,6 +5,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+  padding: 0;
+  margin: 0;
 
   @media (--not-mobile) {
     grid-template-columns: repeat(3, 1fr);
@@ -17,7 +19,7 @@
   line-height: 26px;
   align-items: center;
   text-transform: uppercase;
-  margin-top: 33px;
+  margin-top: 39px;
   margin-bottom: 49px;
 
   @media (--not-mobile) {
