--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -6,12 +6,23 @@
 
 .information__title {
   font-weight: 700;
-  font-size: 30px;
+  font-size: 21px;
   line-height: 26px;
+
+  @media (--not-mobile) {
+    font-size: 30px;
+  }
+
+  &--form {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
 
   &--catalog {
     font-weight: 700;
-    font-size: 30px;
+    font-size: 18px;
     line-height: 26px;
     text-transform: uppercase;
   }
@@ -21,11 +32,6 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-
-  &--catalog {
-    font-size: 14px;
-    line-height: 21px;
-  }
 }
 
 .information__button {
