--- a/source/sass/blocks/your-self.scss
+++ b/source/sass/blocks/your-self.scss
@@ -1,8 +1,10 @@
 .your-self__title {
+  text-transform: uppercase;
+  text-align: center;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
-  text-transform: uppercase;
+  margin: 0;
 }
 
 .your-self__list {
