--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
 @import "./global/global.scss";
+@import "./blocks/page__body.scss";
 @import "./blocks/button.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/benefits.scss";
