--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,4 +1,4 @@
-.advantages__list {
+.advantages {
   display: grid;
   list-style-type: none;
   grid-template-columns: 1fr;
@@ -9,11 +9,17 @@
 
   @media (--not-mobile) {
     grid-column: 1 / -1;
+  }
+}
+
+.advantages__list {
+  padding: 0;
+  margin: 0;
+
+  @media (--not-mobile) {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     list-style-type: none;
-    margin: 0;
-    padding: 0;
   }
 }
 
