--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,14 +1,42 @@
 .catalog {
-  @media (--mobile) {
-    width: 280px;
-  }
+  margin: 0;
+  padding: 0;
 }
+
 
 .catalog__list {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+
+  @media (--tablet) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (--desktop) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.catalog__item {
+  @media (--not-mobile) {
+    grid-column: 1/-1;
+  }
+}
+
+.catalog__signatur {
+  @media (--tablet) {
+    background-color: #f2f2f2;
+  }
 }
 
 .catalog__title {
+  margin: 0;
+  padding: 0;
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
@@ -19,6 +47,12 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+  margin: 0;
+  margin-bottom: 11px;
+
+  @media (--not-desktop) {
+    color: #333333;
+  }
 }
 
 .catalog__like {
@@ -26,4 +60,5 @@
   font-size: 14px;
   line-height: 21px;
   text-transform: uppercase;
+  margin: 0;
 }
