--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -1,11 +1,48 @@
 .description {
   text-align: center;
-}
 
-.description__header {
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
+  &--catalog {
+    text-align: center;
+    text-transform: uppercase;
+
+    @media (--tablet) {
+      margin-top: 62px;
+      margin-bottom: 61px;
+
+      br {
+        display: none;
+      }
+    }
+
+    @media (--desktop) {
+      margin-top: 104px;
+      margin-bottom: 69px;
+
+      br {
+        display: none;
+      }
+    }
+  }
+
+  &--form {
+    text-align: center;
+    text-transform: uppercase;
+
+    @media (--mobile) {
+      margin-top: 30px;
+      margin-bottom: 28px;
+    }
+
+    @media (--tablet) {
+      margin-top: 60px;
+      margin-bottom: 106px;
+    }
+
+    @media (--desktop) {
+      margin-top: 115px;
+      margin-bottom: 66px;
+    }
+  }
 }
 
 .description__title {
@@ -22,15 +59,33 @@
     font-size: 21px;
   }
 
-
-  &--form {
-    font-size: 30px;
+  &--catalog {
+    font-weight: 700;
+    font-size: 18px;
     line-height: 26px;
+
+    @media (--mobile) {
+      margin-top: 47px;
+      margin-bottom: 26px;
+    }
+
+    @media (--not-mobile) {
+      font-size: 30px;
+      line-height: 26px;
+      margin: 0;
+      margin-bottom: 26px;
+    }
   }
 
-  &--catalog {
-    font-size: 30px;
+  &--form {
+    margin: 0;
+    font-weight: 700;
+    font-size: 18px;
     line-height: 26px;
+
+    @media (--not-mobile) {
+      font-size: 30px;
+    }
   }
 }
 
@@ -44,13 +99,31 @@
   margin: 0;
   margin-bottom: 16px;
 
-  &--form {
-    font-size: 14px;
-    line-height: 24px;
-  }
 
   &--catalog {
     font-size: 14px;
     line-height: 21px;
+    margin-top: 0;
+    margin-bottom: 24.68px;
+
+    @media (--not-mobile) {
+      margin: 0;
+    }
+  }
+
+  &--form {
+    font-size: 14px;
+    line-height: 24px;
+    margin: 0;
+    margin-top: 24px;
+
+    @media (--tablet) {
+      line-height: 24px;
+      margin-top: 20px;
+    }
+
+    @media (--desktop) {
+      margin-top: 26px;
+    }
   }
 }
