--- a/source/sass/blocks/your-contact.scss
+++ b/source/sass/blocks/your-contact.scss
@@ -1,8 +1,27 @@
+.your-contact {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 64px;
+  margin-bottom: 59px;
+}
+
+
 .your-contact__title {
   font-weight: 700;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.your-contact__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 .your-contact__item {
