--- a/source/sass/blocks/your-self.scss
+++ b/source/sass/blocks/your-self.scss
@@ -1,15 +1,22 @@
+.your-self {
+  margin-top: 24px;
+}
+
 .your-self__title {
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 26px;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .your-self__list {
   list-style-type: none;
   display: block;
+  padding: 0;
+  margin: 0;
 }
 
 .your-self__item {
