--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "./blocks/advantages.scss";
 @import "./blocks/information.scss";
 @import "./blocks/description.scss";
+@import "./blocks/your.scss";
 @import "./blocks/your-self.scss";
 @import "./blocks/your-contact.scss";
 @import "./blocks/impression.scss";
