--- a/source/sass/blocks/attraction.scss
+++ b/source/sass/blocks/attraction.scss
@@ -15,6 +15,9 @@
 }
 
 .attraction__list {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
   margin: 0;
   padding: 0;
   list-style-type: none;
