--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,3 +1,30 @@
 .button {
   background: transparent;
+  background-color: #81b3d2;
+  color: #ffffff;
+
+  &--form {
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 26px;
+    padding: 18.5px 33px 13.5px;
+    text-transform: uppercase;
+    border: 0;
+  }
+}
+
+.button__form {
+  margin: auto;
+  margin-top: 56px;
+  text-align: center;
+}
+
+.button__text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 21px;
+  color: rgba(51, 51, 51, 0.6);
+  margin: 0;
+  margin-right: 20px;
+  text-align: right;
 }
