--- a/source/sass/blocks/emotions.scss
+++ b/source/sass/blocks/emotions.scss
@@ -1,8 +1,25 @@
+.emotions {
+  text-align: center;
+}
+
 .emotions__title {
   font-weight: 700;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 26px;
-  align-items: center;
-  text-align: center;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+textarea {
+  background: #f2f2f2; /* Цвет фона */
+  color: rgba(0, 0, 0, 0.3);
+  border: 0; /* Параметры рамки */
+  padding: 16px; /* Поля */
+  width: 279px; /* Ширина */
+  height: 150px; /* Высота */
+  box-sizing: border-box; /* Алгоритм расчёта ширины */
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
 }
