--- a/source/sass/blocks/your-contact.scss
+++ b/source/sass/blocks/your-contact.scss
@@ -6,6 +6,10 @@
   text-transform: uppercase;
   margin-top: 64px;
   margin-bottom: 59px;
+
+  @media (--not-mobile) {
+    margin: 0;
+  }
 }
 
 
@@ -16,6 +20,11 @@
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 20px;
+
+  @media (--not-mobile) {
+    font-size: 21px
+    margin: 28px;
+  }
 }
 
 .your-contact__list {
