--- a/source/sass/blocks/attraction.scss
+++ b/source/sass/blocks/attraction.scss
@@ -1,6 +1,16 @@
 .attraction {
   margin-top: 49px;
   margin-bottom: 49px;
+
+  @media (--tablet) {
+    margin-top: 48px;
+    margin-bottom: 42px;
+  }
+
+  @media (--desktop) {
+    margin-top: 56px;
+    margin-bottom: 56px;
+  }
 }
 
 .attraction__title {
@@ -12,6 +22,18 @@
   text-transform: uppercase;
   margin: 0;
   margin-bottom: 20px;
+
+  @media (--not-mobile) {
+    font-size: 21px;
+  }
+
+  @media (--tablet) {
+    margin-bottom: 28px;
+
+    @media (--desktop) {
+      margin-bottom: 56px;
+    }
+  }
 }
 
 .attraction__list {
@@ -22,6 +44,11 @@
   padding: 0;
   list-style-type: none;
   margin-left: 20px;
+
+  @media (--tablet) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .attraction__text {
