--- a/source/sass/blocks/emotions.scss
+++ b/source/sass/blocks/emotions.scss
@@ -9,6 +9,11 @@
   text-transform: uppercase;
   margin: 0;
   margin-bottom: 20px;
+
+  @media (--not-mobile) {
+    font-size: 21px;
+    margin-bottom: 28px;
+  }
 }
 
 textarea {
@@ -22,4 +27,14 @@ textarea {
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
+
+  @media (--tablet) {
+    width: 648px; /* Ширина */
+    height: 160px; /* Высота */
+  }
+
+  @media (--desktop) {
+    width: 768px; /* Ширина */
+    height: 160px; /* Высота */
+  }
 }
