--- a/source/sass/blocks/attraction.scss
+++ b/source/sass/blocks/attraction.scss
@@ -46,8 +46,13 @@
   margin-left: 20px;
 
   @media (--tablet) {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (--desktop) {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
