--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -117,6 +117,12 @@
     margin: 0;
     margin-top: 24px;
 
+    @media (--not-mobile) {
+      br {
+        display: none;
+      }
+    }
+
     @media (--tablet) {
       line-height: 24px;
       margin-top: 20px;
