--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,12 +5,20 @@
   text-decoration: none;
 
   &--index {
+    display: block;
+    margin: auto;
+    width: 186px;
     font-weight: 700;
-    font-size: 21px;
+    font-size: 18px;
     line-height: 26px;
     padding: 16px 49px;
     text-transform: uppercase;
     border: 0;
+
+    @media (--not-mobile) {
+      font-size: 21px;
+      width: 458px;
+    }
   }
 
   &--form {
@@ -27,7 +35,6 @@
   margin: auto;
   margin-top: 32px;
   margin-bottom: 49px;
-  text-align: center;
 }
 
 
