--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -27,7 +27,7 @@
     1200px 57px, /* размеры зигзага */
     cover; /* тут надо просто заполнить всю площадь фоткой */
   background-position:
-    center, /* возможно в макет с центрированием не попадём, но пока сойдёт */
+    center, /* центрирование */
     bottom, /* прижимаем загогулину к низу */
     center; /* при ковровой растяжке фотки лучше всего отцентрировать */
   background-color: #555555; /* нужен какой-то цвет фоновый на случай незагрузки фотки. */
