--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -109,6 +109,8 @@
 
 .photo-sedona {
   grid-column-end: span 2;
+  width: 520px;
+  height: 260px;
 }
 
 .benefits__item:nth-child(2n+2) .photo-sedona {
