--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -123,6 +123,10 @@
   }
 }
 
+.benefits__img {
+  display: block;
+}
+
 .benefits__item:nth-child(2n+2) .photo-sedona {
   @media (--not-mobile) {
     order: -1;
