--- a/source/sass/blocks/page__body.scss
+++ b/source/sass/blocks/page__body.scss
@@ -1,3 +1,15 @@
 .page__body {
-  margin: 0;
+  margin: auto;
+
+  @media (--mobile) {
+    width: 320px;
+  }
+
+  @media (--tablet) {
+    width: 768px;
+  }
+
+  @media (--desktop) {
+    width: 1200px;
+  }
 }
