--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -151,7 +151,9 @@
 }
 
 .video--catalog {
-  margin: 0;
+  margin: auto;
+  margin-top: 0;
+  margin-bottom: 0;
   padding: 0;
 
   @media (--mobile) {
