--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -171,3 +171,12 @@
     height: 500px;
   }
 }
+
+
+.video::before {
+  content: "";
+  display: block;
+  width: 48px;
+  height: 54px;
+  background-image: url("source/icons/play.svg");
+}
