--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -37,6 +37,14 @@
   margin-bottom: 49px;
 }
 
+.button--index:hover {
+  background: #669ec0;
+}
+
+.button--index:activ {
+  background: #5496bd;
+  color: rgba(255, 255, 255, 0.3);
+}
 
 .button__form {
   margin: auto;
