--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,4 @@
 @import "./blocks/catalog.scss";
 @import "./global/fonts.scss";
 @import "./global/viewports.scss";
+@import "./blocks/footer.scss";
