--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -4,7 +4,7 @@
       <a class="contacts__link" href="https://twitter.com/hashtag/VisitSedona">#visitSEDONA</a>
     </div>
     <div class="main-footer__social social">
-      <b class="social__title">Давайте дружить!</b>
+      <b class="social__title visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--icon_vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
