--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -7,14 +7,19 @@
       <b class="social__title visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--icon_vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          <a class="social__link social__link--icon_vk" href="https://vk.com/htmlacademy">
+            <span class="visyally-hidden">Мы в Вконтакте</span>
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--icon_tg" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+          <a class="social__link social__link--icon_tg" href="https://t.me/htmlacademy">
+            <span class="visyally-hidden">Мы в Телеграме</span>
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--icon_yt" href="https://youtube.com/user/htmlacademyru">Мы в
-            Ютубе</a>
+          <a class="social__link social__link--icon_yt" href="https://youtube.com/user/htmlacademyru">
+            <span class="visyally-hidden">Мы в Ютубе</span>
+          </a>
         </li>
       </ul>
     </div>
