--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -3,29 +3,29 @@
     <div class="main-footer__contacts contacts">
       <a class="contacts__link" href="https://twitter.com/hashtag/VisitSedona">#visitSEDONA</a>
     </div>
-    <div class="main-footer__social social">
+    <div class="main-footer__social">
       <b class="social__title visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--icon_vk" href="https://vk.com/htmlacademy">
-            <span class="visyally-hidden">Мы в Вконтакте</span>
+            <span class="visually-hidden">Мы в Вконтакте</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--icon_tg" href="https://t.me/htmlacademy">
-            <span class="visyally-hidden">Мы в Телеграме</span>
+            <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--icon_yt" href="https://youtube.com/user/htmlacademyru">
-            <span class="visyally-hidden">Мы в Ютубе</span>
+            <span class="visually-hidden">Мы в Ютубе</span>
           </a>
         </li>
       </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
       <b class="copyright__text">Разработано:</b>
       <a class="copyright__link visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
+    {# <div class="main-footer__copyright copyright">
+    </div> #}
   </div>
 </footer>
