--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -18,17 +18,29 @@
   width: 100%;
   height: 485px; /* тут не помню сколько оно по высоте */
   background-image:
-    url("/source/icons/welcom.svg"),
-    url("/source/icons/zig-zag.svg"),
-    url("/source/img/sedona.jpg");
+    url("../../icons/sprite.svg#welcom"),
+    url("../../icons/sprite.svg#zig-zag"),
+    url("../../img/sedona.jpg");
   background-repeat: no-repeat;
   background-size:
-    458px 352px, /* размеры надписи */
-    1200px 57px, /* размеры зигзага */
+    458px, /* размеры надписи */
+    1200px, /* размеры зигзага */
     cover; /* тут надо просто заполнить всю площадь фоткой */
   background-position:
     center, /* центрирование */
-    bottom, /* прижимаем загогулину к низу */
+    bottom -572px center, /* прижимаем загогулину к низу */
     center; /* при ковровой растяжке фотки лучше всего отцентрировать */
   background-color: #555555; /* нужен какой-то цвет фоновый на случай незагрузки фотки. */
+
+  @media (--mobile) {
+    background-size:
+      282px,
+      1200px,
+      cover;
+
+    background-position:
+      center, /* центрирование */
+      bottom -572px center, /* прижимаем загогулину к низу */
+      center; /* при ковровой растяжке фотки лучше всего отцентрировать */
+  }
 }
