--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -26,7 +26,7 @@
 }
 
 .social__link--icon_vk {
-  --icon: url("../../icons/vk.svg");
+  --icon: url("../../icons/sprite.svg#vk");
 }
 
 .social__link--icon_tg {
