--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -6,7 +6,7 @@
   <title>{{ pages[pageId].name }} | Sedona | HTML Academy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" sizes="32х32" href="../favicon/favicon32.svg" type="image/svg+xml">
+  <link rel="icon" href="../favicon/favicon32.svg" type="image/svg+xml">
 </head>
 
 <body class="page__body">
