--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,6 @@
 @import "./global/fonts.scss";
 @import "./global/viewports.scss";
 @import "./blocks/main-footer.scss";
+@import "./blocks/photo-sedona.scss";
+@import "./blocks/maps.scss";
+@import "./blocks/main-index.scss";
