--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -14,7 +14,6 @@
   }
 }
 
-
 .benefits__item:nth-child(3) {
   @media (--mobile) {
     margin: 26px 26px 24px 26px;
@@ -75,7 +74,6 @@
   }
 }
 
-
 .benefits__description {
   font-size: 14px;
   line-height: 21px;
@@ -89,8 +87,7 @@
   }
 }
 
-
-.real-hous {
+.benefits__text {
   background-color: #81b3d2;
   color: #ffffff;
 
@@ -104,23 +101,6 @@
 
   @media (--desktop) {
     padding: 47px 52px 57px 53px;
-  }
-}
-
-.photo-sedona {
-  // grid-column-end: span 2;
-  width: 520px;
-  height: 260px;
-  display: block;
-
-  @media (--tablet) {
-    width: 512px;
-    height: 256px;
-  }
-
-  @media (--desktop) {
-    width: 800px;
-    height: 256px;
   }
 }
 
