--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -6,17 +6,17 @@
     <div class="main-footer__social">
       <b class="social__title visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
-        <li class="social__item">
+        <li class="social__item button">
           <a class="social__link social__link--icon_vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Мы в Вконтакте</span>
           </a>
         </li>
-        <li class="social__item">
+        <li class="social__item button">
           <a class="social__link social__link--icon_tg" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
-        <li class="social__item">
+        <li class="social__item button">
           <a class="social__link social__link--icon_yt" href="https://youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Мы в Ютубе</span>
           </a>
