--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -3,21 +3,54 @@
   margin: 0;
 }
 
+.main-footer__wrapper {
+  @media (--not-mobile) {
+    display: flex;
+  }
+}
+
+.main-footer__contacts {
+  width: 166px;
+  margin: auto;
+  margin-top: 38px;
+  margin-bottom: 33px;
+  text-align: center;
+
+  @media (--not-mobile) {
+    margin-top: 48px;
+    margin-bottom: 46px;
+  }
+}
+
 .contacts__link {
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  text-decoration: none;
+  text-transform: uppercase;
   color: #000000;
 }
 
 .social__list {
   display: flex;
-  text-decoration: none;
   list-style-type: none;
+  width: 156px;
   padding: 0;
-  margin: 0;
+  margin: auto;
+
+  @media (--not-mobile) {
+    margin-top: 36px;
+    margin-bottom: 36px;
+  }
 }
 
 .social__item {
   padding: 12px;
-  background-color: #81b3d2;
+  margin-right: 6px;
+}
+
+.social__item:nth-last-child(1) {
+  margin-right: 0;
 }
 
 .social__link::before {
@@ -38,4 +71,27 @@
 
 .social__link--icon_yt {
   --icon: url("../../icons/sprite.svg#yt");
+}
+
+.copyright__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  width: 151px;
+  display: flex;
+  text-transform: uppercase;
+  margin: 47px auto 29px;
+
+  @media (--not-mobile) {
+    margin-top: 50px;
+    margin-bottom: 49px;
+  }
+}
+
+.copyright__text:hover {
+  color: #81b3d2;
+}
+
+.copyright__text:disabled {
+  color: #b3b3b3;
 }
