--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -22,10 +22,8 @@
           </a>
         </li>
       </ul>
-      <b class="copyright__text">Разработано:</b>
-      <a class="copyright__link visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
-    {# <div class="main-footer__copyright copyright">
-    </div> #}
+      <b class="copyright__text">Разработано</b>
+      <a class="copyright__link visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
   </div>
 </footer>
